--- a/location.html
+++ b/location.html
@@ -73,15 +73,42 @@
     </header>
 
     <section class="container-fluid g-0 my-4">
-            <div class="d-flex justify-content-center ">
-                <img class="img-fluid" src="assets/img/site.jpg" alt="site">
-            </div>
+        <div class="d-flex justify-content-center ">
+            <img class="img-fluid" src="assets/img/site.jpg" alt="site">
+        </div>
     </section>
 
     <section class="nearby">
-            <div class="container">
-
+        <div class="container  my-5">
+            <h2>Nearby Places</h2>
+            <div class="row g-4">
+                <div class="col-lg-2 col-12 d-flex flex-column align-items-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin-icon lucide-map-pin"><path d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"/><circle cx="12" cy="10" r="3"/></svg>
+                    <h4>Hiyar Majhe</h4>
+                </div>
+                <div class="col-lg-2 col-12 d-lg-flex d-none justify-content-center  align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-left-icon lucide-move-left"><path d="M6 8L2 12L6 16"/><path d="M2 12H22"/></svg>
+                </div>
+                <div class="col-lg-2 col-12 d-flex d-lg-none justify-content-center  align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-up-icon lucide-move-up"><path d="M8 6L12 2L16 6"/><path d="M12 2V22"/></svg>                </div>
+                <div class="col-lg-2 col-12 d-flex flex-column align-items-center">
+                    <p>1Km Distance</p>
+                    <h4>Amar kuthir</h4>
+                </div>
+                <div class="col-lg-2 col-12 d-flex flex-column align-items-center">
+                    <p>2Km Distance</p>
+                    <h4>Visva Bharati</h4>
+                </div>
+                <div class="col-lg-2 col-12 d-flex flex-column align-items-center">
+                    <p>3Km Distance</p>
+                    <h4>Khoaye Hat</h4>
+                </div>
+                <div class="col-lg-2 col-12 d-flex flex-column align-items-center">
+                    <p>4Km Distance</p>
+                    <h4>Prantik Station</h4>
+                </div>
             </div>
+        </div>
     </section>
 
     <footer class="pt-5">
