home layout fixed

--- a/index.html
+++ b/index.html
@@ -214,12 +214,15 @@
           </div>
         </div>
       </div>
-      <a href="testimonial.html" class="view-more"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+      <a href="testimonial.html" class="view-more d-none d-lg-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
           viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
           class="lucide lucide-arrow-right">
           <path d="M5 12h14" />
           <path d="m12 5 7 7-7 7" />
         </svg></a>
+      <div class="mt-4 d-flex d-lg-none justify-content-center">
+        <a href="testimonial.html" class="view-btn">View All</a>
+      </div>
     </div>
   </section>
 
