vid path change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section class="hero-top">
     <div class="hero-vid">
-      <video src="assets/vid/intro.mp4" autoplay loop muted></video>
+      <video src="https://www.dropbox.com/scl/fi/ky1srw3bn7mlwo4vgpa8b/intro.mp4?rlkey=739h6l0rte4snf54vf26npzb8&st=7uy3hvt1&raw=1" autoplay loop muted></video>
     </div>
     <div class="hero-container">
       <header>
