--- a/faq.html
+++ b/faq.html
@@ -76,7 +76,7 @@
             </ul>
             <div class="d-flex align-items-center gap-3" >
               <a class="call w-50 text-nowrap" href="+919330935204">+91 93309 35204</a>
-              <button class="btn w-50" type="submit">
+              <button onclick="redirectContact()" class="btn w-50" type="submit">
                 BOOK NOW
               </button>
             </form>
