--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </ul>
               <div class="d-flex align-items-center gap-3">
                 <a class="call w-50 text-nowrap" href="tel:+918272962740">+91 82729 62740</a>
-                <button class="btn w-50" >
+                <button onclick="redirectContact()" class="btn w-50" >
                   BOOK NOW
                 </button>
                 </form>
