--- a/bolpur.html
+++ b/bolpur.html
@@ -64,7 +64,7 @@
                         </ul>
                         <div class="d-flex align-items-center gap-3">
                             <a class="call w-50 text-nowrap" href="+919330935204">+91 93309 35204</a>
-                            <button class="btn w-50" type="submit">
+                            <button onclick="redirectContact()" class="btn w-50" type="submit">
                                 BOOK NOW
                             </button>
                             </form>
@@ -85,7 +85,7 @@
                                 <img class="img-fluid"
                                     src="https://images.pexels.com/photos/2174992/pexels-photo-2174992.jpeg"
                                     alt="2BHK" />
-                                <button class="btn w-50">
+                                <button onclick="redirectContact()" class="btn w-50">
                                     BOOK NOW
                                 </button>
                             </div>
@@ -110,7 +110,7 @@
                             <img class="img-fluid"
                                 src="https://images.pexels.com/photos/2031727/pexels-photo-2031727.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                                 alt="2BHK" />
-                            <button class="btn w-50">
+                            <button onclick="redirectContact()" class="btn w-50">
                                 BOOK NOW
                             </button>
                             </div>
@@ -135,7 +135,7 @@
                                 <img class="img-fluid"
                                     src="https://images.pexels.com/photos/434549/pexels-photo-434549.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                                     alt="2BHK" />
-                                <button class="btn w-50">
+                                <button onclick="redirectContact()" class="btn w-50">
                                     BOOK NOW
                                 </button>
                             </div>
@@ -160,7 +160,7 @@
                             <img class="img-fluid"
                                 src="https://images.pexels.com/photos/1320686/pexels-photo-1320686.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                                 alt="2BHK" />
-                            <button class="btn w-50">
+                            <button onclick="redirectContact()" class="btn w-50">
                                 BOOK NOW
                             </button>
                             </div>
