--- a/location.html
+++ b/location.html
@@ -38,7 +38,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="location.html">LOCATION</a>
+                            <a class="nav-link active" href="location.html">LOCATION</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="amenities.html">AMENITIES</a>
@@ -55,7 +55,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="about.html">ABOUT</a>
+                            <a class="nav-link " href="about.html">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">CONTACT</a>
